--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,125 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    margin: 0;
+    padding: 0;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+div {
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+}
+
+.chat-window {
+    background: linear-gradient(to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-header {
+    background-color: invert(rgb(var(--background-start-rgb)));
+    width: 100%;
+    text-align: center;
+}
+
+.chat-header-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin: 0;
+    padding: 0.5rem;
+    border-color: #aad2ef;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+}
+
+.chat-messages {
+    width: 100%;
+    flex-grow: 1;
+    overflow-y: scroll;
+    padding: 0.5rem;
+    border-color: #957DAD;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+}
+
+.chat-message{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.chat-message-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+    padding: 1rem;
+    margin: 0.5rem;
+}
+
+.to {
+    align-items: flex-end;
+    border-color: #facd2e;
+}
+
+.from {
+    align-items: flex-start;
+    border-color: #02bcdd;
+}
+
+.chat-input-section {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 0.5rem;
+    border-color: #957dad;
+    border-width: 2px;
+    border-radius: 10px;
+    border-style: solid;
+}
+
+.chat-input {
+    flex-grow: 1;
+    margin-right: 0.5rem;
+    border-color: #facd2e;
+    border-width: 2px;
+    border-radius: 10px; 
+    background-color: transparent;
+}
+
+.chat-send-button {
+    background: #facd2e;
+    border-width: 2px;
+    border-radius: 10px;
+    font-weight: 700;
+    padding: 0.5rem;
+    margin: 0;
+    color: black;
 }
