--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body {
     background: linear-gradient(to bottom,
             transparent,
             rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+    overflow: hidden;
 }
 
 div {
@@ -39,6 +40,7 @@ div {
     margin: 0;
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .chat-header {
@@ -114,6 +116,7 @@ div {
     border-width: 2px;
     border-radius: 10px; 
     background-color: transparent;
+    padding: 0.5rem;
 }
 
 .chat-send-button {
@@ -124,4 +127,91 @@ div {
     padding: 0.5rem;
     margin: 0;
     color: black;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+.half-page-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    margin: 0;
+}
+
+.articles-header-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border-color: #aad2ef;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+    text-align: center;
+}
+
+.article-links-container {
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
+.article-link {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border-color: #aad2ef;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+}
+
+.snackbar-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    margin: 1rem;
+    color: black;
+    font: 2rem;
+    font-weight: 700;
+    padding: 0.5rem;
+    border-radius: 6px;
+}
+
+.success {
+    background-color: #03bb48;
+}
+
+.error {
+    background-color: #bb0303;
+}
+
+.info {
+    background-color: #facd2e;
+}
+
+.laoding-container {
+    width: 100%;
+    flex-grow: 1;
+    color: black;
+    font: 2rem;
+    font-weight: 700;
+    padding: 0.5rem;
+    border-radius: 6px;
+    text-align: center;
 }
