--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,8 @@ body {
             transparent,
             rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
     overflow: hidden;
+    height: 100vh;
+    width:100vw;
 }
 
 div {
